# LLMinfer

./: .gitattributes  .gitignore  CMakeLists.txt
.cache/clangd/index/: add.cpp.3F6219231DB5D88B.idx  add.h.627738E150CCBA80.idx  add_kernel.cpp.25E3AA265D5C4D2F.idx  add_kernel.cu.53C627346591B3A8.idx  add_kernel.cuh.D5501948D70E2BB4.idx  add_kernel.h.86BC26CE1100D43A.idx  alloc.cpp.9444E77FB4385AC7.idx  alloc.h.B6F78550D726E384.idx  alloc_cpu.cpp.E4279904C1169663.idx  alloc_cu.cpp.1B7D22CD5D2147E4.idx  argmax_kernel.cu.0B6E2E1D3FB0A38E.idx  argmax_kernel.cuh.8632322F927E2B05.idx  argmax_sampler.cpp.A4DB4EF7B2A392F8.idx  argmax_sampler.h.060C51D9BCA7E3C6.idx  base.cpp.B0B4A1C088E562A6.idx  base.h.BEE7EC4EF88E521C.idx  buffer.cpp.22D295881CD37B93.idx  buffer.h.38755C140445276D.idx  config.h.6AB3A27FD853EE59.idx  cuda_config.h.7CA8B86A689AA8FB.idx  emb_kernel.cpp.2CD174E54729208C.idx  emb_kernel.cu.74114F5A5CEF80E6.idx  emb_kernel.cuh.B55DFDEDF5B8358E.idx  emb_kernel.h.1F2615D2F6F5B55C.idx  embedding.cpp.027D432A348CF08C.idx  embedding.h.7AD8ACE6CCAF972D.idx  encode.cpp.A3805C320FB348D5.idx  encode.h.F54C9292F2FD9D2D.idx  kernels_interface.h.43DFD9CDF07632BD.idx  kernels_interfaces.cpp.89F3FD2302F15863.idx  layer.cpp.40BA14889A089727.idx  layer.h.823077D7AA175873.idx  llama2.cpp.9F0909D382F6B298.idx  llama2.h.45E1AD9B2C487720.idx  main.cpp.4D0B3F56017AFC62.idx  matmul.cpp.D64B0A05A8D5D128.idx  matmul.h.429B4F94A533359F.idx  matmul_kernel.cpp.D339A369B54B7413.idx  matmul_kernel.cu.24986A051AC1FB5C.idx  matmul_kernel.cuh.F3361D9F9F3DF356.idx  (+43 more)
cmake/: cuda.cmake
demo/: CMakeLists.txt  main.cpp
llminfer/include/base/: alloc.h  base.h  buffer.h
llminfer/include/model/: model.h
llminfer/include/op/: encode.h  layer.h
llminfer/include/tensor/: tensor.h
llminfer/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  buffer.cpp
llminfer/source/model/: llama2.cpp  model.cpp
llminfer/source/op/: add.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
llminfer/source/op/kernels/: kernels_interfaces.cpp
llminfer/source/op/kernels/cpu/: emb_kernel.cpp  matmul_kernel.cpp  mha_kernel.cpp  rmsnorm_kernel.cpp  softmax_kernel.cpp  swiglu_kernel.cpp
llminfer/source/op/kernels/cuda/: emb_kernel.cu  matmul_kernel.cu  rmsnorm_kernel.cu  swiglu_kernel.cu
llminfer/source/sampler/: argmax_sampler.cpp
llminfer/source/tensor/: tensor.cpp
test/: CMakeLists.txt  test_main.cpp
test/test_tensor/: test_buffer.cpp
